refactoring and addition of methods implemented in the CourseRepository interface